containments/folderview: fix cut/copy/paste shortcuts

GridView intercepts the cut/copy/paste shortcuts and then it does nothing with them
use the already used eventfilter solution to manage those 3 shortcuts

BUG:498867