containments/desktop/package/contents/ui/FolderView.qml
@@ -1050,6 +1050,16 @@ FocusScope {
                     onCreateFolder: {
                         model.createFolder();
                     }
+
+                    onCutFile: dir.cut()
+
+                    onCopyFile: dir.copy()
+
+                    onPasteFile: {
+                        // Make sure paste action is enabled when needed
+                        dir.updateActions();
+                        dir.paste();
+                    }
                 }
 
                 Keys.onPressed: event => {
@@ -1069,12 +1079,6 @@ FocusScope {
                     } else if (event.key === Qt.Key_End) {
                         currentIndex = count - 1;
                         updateSelection(event.modifiers);
-                    } else if (event.matches(StandardKey.Copy)) {
-                        dir.copy();
-                    } else if (event.matches(StandardKey.Paste)) {
-                        dir.paste();
-                    } else if (event.matches(StandardKey.Cut)) {
-                        dir.cut();
                     } else if (event.matches(StandardKey.Undo)) {
                         dir.undo();
                     } else if (event.matches(StandardKey.Refresh)) {
